--- a/index.html
+++ b/index.html
@@ -210,23 +210,73 @@
  </div>
 </section>
 
-<section class="pt-5" id="blog">
-  <div class="container pt-5">
-    <div class="introduction pt-5 text-center mb-5">
-      <h1 class="fw-bold">Testimonial</h1>
+<section class="testimonial py-5 px-4" id="blog">
+  <div class="container py-2">
+    <div class="section-title py-3 mb-4">
+      <h1 class="fw-bold text-center">Testimonial</h1>
     </div>
-    <div class="row">
-      <div class="col-md-6">
-        <img class="w-50" src="img/Photos/Man.png" alt="">
-
-      </div>
-      <div class="col-lg-7 text-center">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam, aperiam velit ab repellat adipisci, dolorum, animi eveniet soluta laudantium cupiditate magni unde porro sequi. Eos, libero obcaecati. Quaerat, nobis reiciendis?</p>
-      
+    <div class="single-testi">
+      <div class="row align-items-center justify-content-between px-5">
+        <div class="col-md-6 col-lg-5 mb-4 mb-md-0 px-xl-5">
+          <div class="img px-3 px-sm-5 px-md-3 px-lg-5 text-center text-md-start"><img class="w-100 px-5" src="img/Photos/man.png" alt=""></div>
+        </div>
+        <div class="col-md-6 col-lg-7">
+         <p class="m-0 text-center text-md-start">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or random ised words.</p>
+        </div>
       </div>
     </div>
   </div>
 </section>
+<section class="footer-section pt-5 ">
+  <div class=" container footer ">
+    <div class="row">
+      <div class="col-md-4">
+        <p>Millions of people of all ages and from around
+
+          the world are improving their lives with us</p>
+
+      </div>
+      <div class="col-md-8">
+        <div class="row container">
+          <div class="col-sm-4">
+            <ul>
+              <h5>Corse</h5>
+              <li>Graphic Design</li>
+              <li>Web Design</li>
+              <li>Business</li>
+              <li>Marketing</li>
+              <li>Engineering</li>
+            </ul>
+          </div>
+          <div class="col-sm-4">
+            <ul>
+              <h5>trems</h5>
+              <li>Graphic Design</li>
+              <li>Web Design</li>
+              <li>Business</li>
+              <li>Marketing</li>
+              <li>Engineering</li>
+            </ul>
+          </div>
+          <div class="col-sm-4">
+            <ul>
+              <h5>Useful Link</h5>
+              <li>Graphic Design</li>
+              <li>Web Design</li>
+              <li>Business</li>
+              <li>Marketing</li>
+              <li>Engineering</li>
+            </ul>
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <p class="copyright text-center pb-3 pt-5">Copyright © 2020 Mridul.com</p>
+
+  </div>
+</section>
+
 
 <script src="js/bootstrap.min.js"></script>
 </body>
