--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <a class="nav-link" href="#blog">Blog</a>
               </li>
               <li>
-                <button type="button" class="btn btn-primary sing-in-button">Sing in</button>
+                <button type="button" class="btn btn-primary sing-in-button d-none d-lg-block">Sing in</button>
               </li>
             </ul>
           </div>
